chat service test  * 1. 채팅방 생성      * 1-1. IM, GROUP, DIRECT      * 1-2. 채팅방 중복 생성 방지      * 1-3. 존재하지 않은 userId 들어오면 error 발생      * <p>      * 2. 채팅방 목록      * 2-1. 채팅방 목록 정상 조회      * 2-2. lastMessageId 기준으로 Ordering      * <p>      * 3. 채팅방 가입      * 3-1. 채팅방 정상 가입 & 이미 가입된 유저가 다시 가입을 할 때 UserAlreadyJoinedException 발생      * 3-2. chatKey 업데이트      * <p>      * 4. 채팅방 나가기      * 4-1. 채팅방 정상적으로 잘 나가기 & 채팅방에 참여중이지 않은 유저 채팅방을 나가면 UserNotJoinedException 발생      * 4-2. chatKey 업데이트      * <p>      * 5. chat key      * 5-1. 같은 유저 조합이면 동일한 chat key 가 생성